loans-service/k8s/peer-auth.yaml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: loans-ms-mtls
  namespace: banking
spec:
  selector:
    matchLabels:
      app: loans-ms
  mtls:
    mode: STRICT
  portLevelMtls:
    "8081":
      mode: PERMISSIVE
