loans-service/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loans-service
  namespace: banking
  labels:
    app: loans-ms
spec:
  selector:
    app: loans-ms
  ports:
    - port: 8090
      targetPort: 8090
      name: http
  type: ClusterIP
