loans-service/k8s/authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: loans-ms-policy
  namespace: banking
spec:
  selector:
    matchLabels:
      app: loans-ms
  action: ALLOW
  rules:
    # API Gateway — all account endpoints
    - from:
        - source:
            principals:
              - "cluster.local/ns/banking/sa/api-gateway-sa"
      to:
        - operation:
            methods: ["GET","POST","PATCH"]
            paths: ["/api/v1/loans/*"]
    # Transactions MS — credit/debit only
    - from:
        - source:
            principals:
              - "cluster.local/ns/banking/sa/loans-ms-sa"
      to:
        - operation:
            methods: ["PATCH"]
            paths:
              - "/api/v1/loans/*/credit"
              - "/api/v1/loans/*/debit"
    # Loans MS — disburse credit only
    - from:
        - source:
            principals:
              - "cluster.local/ns/banking/sa/loans-ms-sa"
      to:
        - operation:
            methods: ["PATCH"]
            paths: ["/api/v1/loans/*/credit"]
    # Monitoring
    - from:
        - source:
            namespaces: ["monitoring"]
      to:
        - operation:
            paths: ["/actuator/health", "/actuator/prometheus"]
